fix white gap on right

--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -3,10 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-size: auto, cover;
+  background-size: cover;
   background-clip: border-box;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .navContainer {
@@ -50,7 +50,7 @@
   font-weight: 500;
   text-align: center;
   color: #c9cac2;
-  padding: 20px;
+  /* padding: 20px; */
   background: -webkit-linear-gradient(#ffffff, #fff8f1);
   background-clip: text;
   -webkit-background-clip: text;
